--- a/admin/index.html
+++ b/admin/index.html
@@ -6,15 +6,18 @@
     <title>TeamHub - Team Collaboration Platform</title>
     <meta name="description" content="Internal team collaboration site for clear communication, progress tracking, and resource management" />
     <meta name="author" content="TeamHub" />
+    <!-- <link rel="icon" href="/favicon.ico" /> -->
+    <link rel="icon" href="/logo-no-background.png" />
+    <link rel="apple-touch-icon" href="/logo-no-background.png" />
 
     <meta property="og:title" content="TeamHub - Team Collaboration Platform" />
     <meta property="og:description" content="Internal team collaboration site for clear communication, progress tracking, and resource management" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/logo-no-background.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/logo-no-background.png" />
   </head>
 
   <body>
